Memory leak in armature move layers #34315

Closed
opened 2013-02-19 06:36:38 +01:00 by Campbell Barton · 4 comments

%%%tested with r54653

In default scene

  • Add armature

  • Enter editmode

  • Press Mkey

  • Press Escape

exit blender,

gives leaks:
ReportMessage len: 36 0x384cb58
ARMATURE_OT_bone_layers len: 168 0x516fdb8
wmOperatorPtrRNA len: 24 0x514abc8
IDProperty array dup len: 128 0x514ac28
wmOperatorReportList len: 40 0x514acf8
IDProperty array len: 128 0x514ae38
id property array len: 128 0x514af08
%%%

%%%tested with r54653 In default scene - Add armature - Enter editmode - Press Mkey - Press Escape exit blender, gives leaks: ReportMessage len: 36 0x384cb58 ARMATURE_OT_bone_layers len: 168 0x516fdb8 wmOperatorPtrRNA len: 24 0x514abc8 IDProperty array dup len: 128 0x514ac28 wmOperatorReportList len: 40 0x514acf8 IDProperty array len: 128 0x514ae38 id property array len: 128 0x514af08 %%%
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'

%%%The same issue happens with OBJECT_OT_move_to_layer actually. But i'm not familiar with this part of code and from quick glance couldn't find where free is missing..%%%

%%%The same issue happens with OBJECT_OT_move_to_layer actually. But i'm not familiar with this part of code and from quick glance couldn't find where free is missing..%%%

%%%My mistake, this is because of the change I did to not execute the operator until actually clicking one of the buttons in the popup. Fix in svn.%%%

%%%My mistake, this is because of the change I did to not execute the operator until actually clicking one of the buttons in the popup. Fix in svn.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34315
No description provided.