Fix #34315: memory leak cancelling move to layer operator, after change to make it not execute immediately when opening the popup.